# Makma3D

./: .gitignore  CMakeLists.txt  README.md
include/: Makma3D.hpp  Makma3D_GLFW.hpp
include/arrays/: Array.cpp  Array.hpp  ArrayTools.cpp  ArrayTools.hpp  LinkedArray.cpp  LinkedArray.hpp  QueueArray.cpp  QueueArray.hpp  StackArray.cpp  StackArray.hpp
include/auxillary/: Array.cpp  Array.hpp  ArrayTools.cpp  ArrayTools.hpp  LinkedArray.cpp  LinkedArray.hpp  StackArray.cpp  StackArray.hpp
include/glfw/: Instance.hpp  Monitor.hpp  Window.hpp
include/gpu/: Device.hpp  DeviceFeature.hpp  PhysicalDevice.hpp  PhysicalDeviceType.hpp  QueueType.hpp
include/instance/: Extension.hpp  Instance.hpp  Version.hpp
include/tools/: Logger.hpp  StreamOperators.hpp
include/vulkanic/auxillary/: ErrorCodes.hpp  Formats.hpp  ImageLayouts.hpp
include/vulkanic/gpu/: GPU.hpp  GPUFeatureFlags.hpp  HardwareGPU.hpp  HardwareGPUTypes.hpp  QueueFamilyInfo.hpp  QueueFamilyMapping.hpp  QueueTypeFlags.hpp
include/vulkanic/instance/: Instance.hpp
include/vulkanic/surface/: Surface.hpp
include/window/: Instance.hpp  Monitor.hpp  Window.hpp  WindowMode.hpp
src/: CMakeLists.txt  dummy.cpp
src/glfw/: CMakeLists.txt  Instance.cpp  Monitor.cpp  Window.cpp
src/gpu/: CMakeLists.txt  Device.cpp  PhysicalDevice.cpp
src/instance/: CMakeLists.txt  Instance.cpp
src/tools/: CMakeLists.txt  Common.cpp  Common.hpp  Logger.cpp  Logger.hpp  StreamOperators.hpp
src/vulkanic/: CMakeLists.txt
src/vulkanic/auxillary/: MemoryProperties.hpp  ShaderStages.hpp
src/vulkanic/gpu/: CMakeLists.txt  GPU.cpp  HardwareGPU.cpp
src/vulkanic/instance/: CMakeLists.txt  Instance.cpp
src/vulkanic/surface/: CMakeLists.txt  Surface.cpp
src/window/: CMakeLists.txt  Instance.cpp  Monitor.cpp  Window.cpp  Window.hpp
test/: Main.cpp
